Fixed spacing for Essays

--- a/css/style.css
+++ b/css/style.css
@@ -369,12 +369,19 @@ a {
 }
 
 #essays ul {
-	margin-top: 2vw;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	flex-wrap: wrap;
 }
+
+.more-essays ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
+} 
 
 #essays li {
 	position: relative;
@@ -387,9 +394,8 @@ a {
     list-style-type: none !important;
     
     padding: 0;
-/*    flex-grow: 1;*/
-/*    margin: auto;*/
-    margin: 2vw 2vw 0vw 0vw;
+    margin: auto;
+    margin-top: 3vw;
     
     width: 21vw;
 	height: 30vw;
@@ -402,8 +408,6 @@ a {
 	padding:2vw 2vw 2vw 2vw;
 	text-align: left;
 }
-
-#essays 
 
 #essays a {
 	display: block;
@@ -502,7 +506,6 @@ a {
 #show-more {
 	margin: 0 auto;
 	margin-top: 4vw;
-	margin-left: -2vw;
 
 
 }
@@ -868,7 +871,7 @@ footer .right p {
 ========================================================== 
 */
 
-@media only screen and (max-width: 720px)  {
+@media only screen and (max-width: 760px)  {
 
 
 
